apps/copyparty/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: copyparty
  namespace: copyparty
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: "https"
    traefik.ingress.kubernetes.io/service.serverstransport: copyparty-skip-verify-transport@kubernetescrd
spec:
  selector:
    app: copyparty
  ports:
    - name: http
      port: 3923
      targetPort: http
    - name: sftp
      port: 3922
      targetPort: sftp
