apps/copyparty/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copyparty
  namespace: copyparty
  annotations:
    external-dns.kubernetes.io/target: node.${DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: files.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: copyparty
                port:
                  name: http
